...
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: Gaps.lg),
            child: Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                Text(
                  'Confirm Event',
                  style: AppText.titleMediumEmph.copyWith(
                    color: BrandColors.text1,
                  ),
                ),
                GestureDetector(
                  onTap: () => Navigator.of(context).pop(),
...
                        padding: const EdgeInsets.symmetric(vertical: 12),
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(16),
                        ),
                      ),
                      child: Text(
                        'Create',
                        style: AppText.titleMediumEmph.copyWith(
                          color: BrandColors.text1,
                        ),
                      ),
                    ),
                  ),
...
